Fixing spacing for inserted text block on Full-Width page

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -6727,6 +6727,10 @@ figure.align-center figcaption {
 .full-width-page-wrapper .lastest-events-list {
   padding-top: 80px; }
 
+.full-width-page-wrapper .paragraph-text-block {
+  padding: 80px;
+  padding-bottom: 0; }
+
 .full-width-page-banner {
   display: -ms-grid;
   display: grid;
@@ -6789,7 +6793,8 @@ figure.align-center figcaption {
       letter-spacing: -1.2px; } }
 
 .full-width-page {
-  padding: 0; }
+  padding: 0;
+  padding-bottom: 40px; }
   .full-width-page .field-content-panel {
     grid-column: 1/-1; }
 
