--- a/docroot/themes/custom/ucsf/scss/node/_node-full-wdith-page.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-full-wdith-page.scss
@@ -6,6 +6,11 @@
   .lastest-events-list {
     padding-top: $space-ten;
   }
+
+  .paragraph-text-block {
+    padding: $space-ten;
+    padding-bottom: 0;
+  }
 }
 
 .full-width-page-banner {
@@ -61,6 +66,7 @@
 
 .full-width-page {
   padding: 0;
+  padding-bottom: $space-five;
 
   .field-content-panel {
     grid-column: 1/-1;
